--- a/estilos/style.css
+++ b/estilos/style.css
@@ -9,20 +9,25 @@ body {
 
 main {
     background-color: white;
-    width: 500px;
+    width: 560px;
     margin: auto;
     padding: 10px;
-    box-shadow: 3px 3px 5pxx rgba(0, 0, 0, 0.463);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.463);
 }
 
 h1 {
-    font-size: 2cm;
+    font-size: 2em;
     color: rgb(58, 0, 112);
 }
 
 h2 {
-    font-size: 1.5cm;
+    font-size: 1.5em;
     color: rgb(58, 0, 112);
+}
+
+img.lado {
+    float: right;
+
 }
 
 a {
